--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,12 @@
+@import './styles/Restaurant/mixin';
 @import './styles/custom.scss';
 @import './styles/article/Article.scss';
+
+
+//餐廳區
+@import './styles/Restaurant/resbutton';
+@import './styles/Restaurant/resbanner';
+@import'./styles/Restaurant/reslist';
+@import'./styles/Restaurant/resproduct';
+@import'./styles/Restaurant/map';
+@import'./styles/Restaurant/resmapsearch';
