--- a/src/styles/article/Article.scss
+++ b/src/styles/article/Article.scss
@@ -9,7 +9,7 @@
       text-align: left;
       top: 30%;
       font-size: 60px;
-      color: $f_darkgreen;
+      color: $dark-green;
       padding: 0 20px;
     }
   }
@@ -28,13 +28,13 @@
   
   .title-fz {
     p {
-      color: $f_darkgreen;
+      color: $dark-green;
       font-size: 32px;
     }
   }
   
   hr {
-    border: 2px solid $f_darkgreen;
+    border: 2px solid $dark-green;
   }
   
   #col-cat {
