修改會員中心標題樣式

--- a/src/styles/Member/_MemberOrder.scss
+++ b/src/styles/Member/_MemberOrder.scss
@@ -35,6 +35,7 @@
       }
       #member-order-h1 {
         color: #2a593e;
+        text-align:center;
       }
       /* nav active */
       .nav-pills .nav-link.active,
