--- a/src/styles/Member/_MemberProfile.scss
+++ b/src/styles/Member/_MemberProfile.scss
@@ -45,6 +45,7 @@
       }
       #karin-profile-h1 {
         color: #2a593e;
+        text-align:center;
       }
       /* nav active */
       .karin-member-nav {
