--- a/src/styles/Restaurant/_resbanner.scss
+++ b/src/styles/Restaurant/_resbanner.scss
@@ -57,24 +57,23 @@
     margin-top: 15px;
     @include mobile {
       width: 90%;
-  
       margin-bottom: 10px;
     }
   }
 
   #ressubmit {
-    
     position: absolute;
-    background-color: $light-green;
+    background-color: #8fc065;
     border-radius: 50px;
     margin-top: 15px;
     right: 31%;
-    top: 8px;
+    top: 7px;
     width: 100px;
     color: #fff;
     border: none;
     outline: none;
-    padding: 3px 18px;
+    padding: 7px 18px;
+
     @include mobile {
       width: 80px;
       right: 8%;
