--- a/src/styles/Restaurant/_resmapsearch.scss
+++ b/src/styles/Restaurant/_resmapsearch.scss
@@ -4,7 +4,7 @@
   
   #map-address {
     width: 100%;
-    // height: 50px;
+    height: 44px;
     border-radius: 50px;
     margin: 0 auto;
     background-color: #fff;
@@ -14,10 +14,12 @@
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-  
+    padding: 20px;
+
     @include mobile {
       width: 90%;
       margin-bottom: 10px;
+      display: none;
     }
   }
 
@@ -27,17 +29,18 @@
     border-radius: 50px;
     margin-top: 15px;
     right: 2%;
-    top: -13px;
+    top: -9px;
     width: 100p;
     color: #fff;
     border: none;
     outline: none;
     padding: 3px 18px;
-    width: 58px;
-    height: 37px;
+    width: 54px;
+    height: 34px;
     @include mobile {
       width: 80px;
       right: 8%;
+      display: none;
     }
   }
   
