--- a/src/index.scss
+++ b/src/index.scss
@@ -37,10 +37,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Yeseva+One&display=swap');
 
 // 購物車
-@import './styles/Carts/Cart_global.scss';
-@import './styles/Carts/Cart_PreOrder.scss';
-// @import './style/Carts/Cart_Manage.scss';
+@import './styles/Carts/Cartglobal.scss';
+@import './styles/Carts/CartPreOrder.scss';
+// @import './style/Carts/CartManage.scss';
 // @import './style/Carts/Banner.scss';
 // @import './style/Carts/ProcessChart.scss';
-// @import './style/Carts/Cart_ConfirmOrder.scss';
-// @import './style/Carts/Cart_Complete.scss';
+// @import './style/Carts/CartConfirmOrder.scss';
+// @import './style/Carts/CartComplete.scss';
