--- a/src/styles/Restaurant/_resproduct.scss
+++ b/src/styles/Restaurant/_resproduct.scss
@@ -1,113 +1,109 @@
-  //餐廳細節頁res-detail
-  
-  .resImg {
-    border-radius: 15px 0 0 15px;
-    @include mobile {
-      border-radius: 0px;
+//餐廳細節頁res-detail
+
+.resImg {
+  border-radius: 15px 0 0 15px;
+  @include mobile {
+    border-radius: 0px;
+  }
+}
+.res-production {
+  background-color: #ffb606;
+  height: 100%;
+  border-radius: 0 15px 15px 0px;
+  h3 {
+    font-size: 24px;
+    line-height: 1.5;
+    padding: 150px 100px;
+  }
+
+  @include mobile {
+    border-radius: 0px;
+    h3 {
+      font-size: 20px;
+      padding: 110px 65px;
     }
   }
-  .res-production {
-    background-color: #ffb606;
-    height: 100%;
-    border-radius: 0 15px 15px 0px;
-    h3 {
-      font-size: 24px;
-      line-height: 1.5;
-      padding: 150px 100px;
-    }
-  
-    @include mobile {
-      border-radius: 0px;
-      h3 {
-        font-size: 20px;
-        padding: 110px 65px;
-      }
-    }
+}
+@include mobile {
+  h3 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
+
+.res-connect {
+  h3 {
+    font-size: 24px;
+    padding-top: 50px;
   }
   @include mobile {
     h3 {
-      font-size: 16px;
-    }
-    p {
-      font-size: 14px;
+      font-size: 20px;
+      padding-top: 40px;
     }
   }
-  
-  .res-connect {
-    h3 {
-      font-size: 24px;
-      padding-top: 50px;
-    }
-    @include mobile {
-      h3 {
-        font-size: 20px;
-        padding-top: 40px;
-      }
-    }
-  }
+}
 //菜單產品
 .res-menu {
-    .res-product-body {
-      padding: 5px 10px;
-      border-left: 2px solid $light-green;
-      border-right: 2px solid $light-green;
-      border-bottom: 2px solid $light-green;
-      border-radius: 0 0 15px 15px;
-  
-      h3 {
-        font-size: 20px;
-        color: $dark-green;
-        padding-top: 15px;
-      }  }
-      .res-pic-wrapper{
-        position: relative;
-        overflow: hidden;
-      
-      }
+  .res-product-body {
+    padding: 5px 10px;
+    border-left: 2px solid $light-green;
+    border-right: 2px solid $light-green;
+    border-bottom: 2px solid $light-green;
+    border-radius: 0 0 15px 15px;
 
-      .res-product-card-overlay{
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        transform: translateY(100%);
-        transition: transform .7s;
-        background-color: transparent;
-        height: 360px;
-        .res-orderBtn{
-      border: 1px solid $dark-green;
-      color:$dark-green;
+    h3 {
+      font-size: 20px;
+      color: $dark-green;
+      padding-top: 15px;
+    }
+  }
+  .res-pic-wrapper {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .res-product-card-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    transform: translateY(100%);
+    transition: transform 0.7s;
+    background-color: transparent;
+    height: 360px;
+    .res-orderBtn {
+      border: 2px solid $dark-green;
+      color: $dark-green;
       font-weight: 700;
       text-align: center;
-      width: 150px;
-  height:45px;
-  line-height: 45px;
+      // width: 150px;
+      // height: 45px;
+      // line-height: 45px;
       border-radius: 50px;
-  
-    }
-
-    }
- 
-
-    @include mobile {
-      margin: 5px 35px;
-  
-      .res-product-body {
-        padding: 0px 20px;
-      }
-      h3 {
-        font-size: 18px;
-      }
+      padding: 5px;
+      margin-top: 59px;
     }
   }
 
+  @include mobile {
+    margin: 5px 35px;
 
-  .res-menu:hover .res-product-card-overlay{
-    transform: translateY(0%);
-    background-color: rgba(245, 245, 245, 0.548);
-    cursor: pointer;
-   
+    .res-product-body {
+      padding: 0px 20px;
+    }
+    h3 {
+      font-size: 18px;
+    }
+  }
 }
 
-  
+.res-menu:hover .res-product-card-overlay {
+  transform: translateY(0%);
+  background-color: rgba(245, 245, 245, 0.548);
+  cursor: pointer;
+  display: block;
+}
