--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,9 @@ $light-orange: #fb6107;
     display: none;
   }
 }
+@mixin spaceBetweenCat {
+  padding-top: 100px;
+}
 /*------------------------------ 元件 ------------------------------*/
 /*----------- footer -----------*/
 footer {
@@ -125,37 +128,44 @@ footer {
 /*----------- Navbar -----------*/
 .MyNavbar {
   // background-color: white !important;
-  background-color: $light-green;
-  color: black !important;
-  height: 60px;
-  margin-bottom: 10px;
+  // background-color: $light-green;
+  // color: black !important;
+  // height: 60px;
+  // margin-bottom: 10px;
+  background-color: green;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 20%);
+
+  .navLogoWrap{
+    width: 120px;
+      padding: 0 20px;
+      img{
+        width: 100%;
+      }
+    }
+
+    .active{
+      text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+    
+    }
+    .navText{
+      color: black;
+      &:hover{
+        color: $light-green;
+      }
+    }
+  
 }
 
-.navLogoWrap{
-width: 120px;
-  padding: 0 20px;
-  img{
-    width: 100%;
+.myNavbarNew{
+  text-align: center;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 20%);
+  .navLogoWrap {
+    width: 120px;
+    padding: 0 20px;
+    img {
+      width: 100%;
+    }
   }
-}
-
-#responsive-navbar-nav{
-  display: flex;
-  justify-content: space-between;
-  padding: 0 30px;
-  // color: black;
-  @media (max-width: 992px) {
-    flex-direction: column;
-  }
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  // color: rgba(255, 255, 255, 0.55);
-  // color: black;
-}
-
-main{ //讓navbar不要蓋到內容
-  margin-top: 60px;
 }
 
 .breadcrumb{
@@ -163,9 +173,7 @@ main{ //讓navbar不要蓋到內容
   padding: 10px;
 }
 
-
 /*----------- 首頁 -----------*/
-
 
 //首頁小按鈕
 .hp_sBtn {
@@ -250,6 +258,13 @@ main{ //讓navbar不要蓋到內容
         text-align: center;
         position: relative;
         top: 28%;
+        a {
+          text-decoration: none;
+          color: black;
+          &:hover {
+            color: $light-green;
+          }
+        }
 
         p {
           margin: 10px 0;
@@ -310,9 +325,40 @@ main{ //讓navbar不要蓋到內容
       }
     }
   }
+  /*---------- 客製化  ----------*/
+  #customized {
+    @include spaceBetweenCat;
+    .title {
+      text-align: center;
+      margin-top: 30px;
+      h6 {
+        letter-spacing: 10px;
+      }
+    }
+    .inputWrap {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      width: 70%;
+      margin: 30px auto;
+
+      select {
+        border-radius: 15px;
+        letter-spacing: 10px;
+        text-align: center;
+      }
+
+      input {
+        text-align: center;
+        border-radius: 15px;
+        letter-spacing: 10px;
+      }
+    }
+  }
 
   /*---------- 商城  ----------*/
   .hp_shop {
+    @include spaceBetweenCat;
     .hpShopCatWrap {
       margin-bottom: 50px;
     }
@@ -410,6 +456,7 @@ main{ //讓navbar不要蓋到內容
 
   /*---------- 餐廳  ----------*/
   .hpRes {
+    @include spaceBetweenCat;
     .txtWrap {
       margin: auto;
       text-align: center;
