article scss 修改

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,10 @@ $light-orange: #fb6107;
 @mixin spaceBetweenCat {
   padding-top: 100px;
 }
+
+main{
+  padding-top: 60px;
+}
 /*------------------------------ 元件 ------------------------------*/
 /*----------- footer -----------*/
 footer {
