--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -100,11 +100,18 @@ body {
   letter-spacing: 0px;
   color: #fb6107;
 }
-
+.pd-row{
+  flex-direction: row;
+}
 /* 分類按鈕 */
 .pd-cate {
   flex-direction: column;
   margin-top: 50px;
+  display: flex;
+  margin-bottom: 80px;
+  align-items: center;
+  justify-content: center;
+  // width: 100%;
 }
 input[name='pd-cate'] {
   display: none;
@@ -118,6 +125,8 @@ input[name='pd-cate'] {
   text-align: center;
   padding: 5px 0;
   transition: 0.3s;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 input[name='pd-cate']:checked + label {
@@ -165,6 +174,7 @@ input[name='pd-filter'] + label {
   font-size: 16px;
   color: #2a593e;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 .pd-radio-wrap label {
   margin-left: 15px;
@@ -240,6 +250,7 @@ input[name='pd-filter'] + label {
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 50px;
+  max-width: 900px !important;
 }
 /* 頁數 */
 .page-btn-wrap {
@@ -294,6 +305,7 @@ input[name='pd-filter'] + label {
 }
 .pd-filter-btn-wrap {
   margin: 0px auto;
+  width: auto !important;
 }
 /* RWD */
 
