--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -33,7 +33,7 @@ body {
       )
       center center / 100% 100%,
     url('http://localhost:3000/images/Product/pd-banner-all.png')
-      100% center / auto 100%;
+      100% center / auto 100% !important;
 }
 /* 快速上桌banner */
 .pd-banner-table {
@@ -46,7 +46,7 @@ body {
       )
       center center / 100% 100%,
     url('http://localhost:3000/images/Product/pd-banner-table.jpeg')
-      100% center / 60% auto;
+      100% center / 60% auto !important;
 }
 /* 健身專區 */
 .pd-banner-workout {
@@ -59,7 +59,7 @@ body {
       )
       center center / 100% 100%,
     url('http://localhost:3000/images/Product/pd-banner-workout.jpeg')
-      100% center / 50% auto;
+      100% center / 50% auto !important;
 }
 
 /* 嚴選食材 */
@@ -67,13 +67,13 @@ body {
   width: 100%;
   height: 400px;
   background: linear-gradient(
-        110deg,
+        110deg, 
         rgb(255, 255, 255) 52%,
         transparent 10%
       )
       center center / 100% 100%,
     url('http://localhost:3000/images/Product/pd-banner-material.jpg')
-      100% center / auto 100%;
+      100% center / auto 100% !important;
 }
 
 .pd-ba-container {
