--- a/src/styles/Product/_Customize.scss
+++ b/src/styles/Product/_Customize.scss
@@ -6,6 +6,7 @@
   margin-bottom: 80px;
   flex-wrap: wrap;
   padding-bottom: 50px;
+  height: 100vh;
 }
 
 /* 左區 */
@@ -57,9 +58,9 @@
 }
 
 .pd-target-wrap {
-  margin-top: 70px;
+  margin-top: 30px;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 .pd-target-wrap h1 {
@@ -84,7 +85,9 @@
   text-align: center;
   margin: auto 20px;
 }
-
+.pd-target{
+  margin-bottom: 50px;
+}
 .pd-cusClick {
   border: 4px solid #fb6107;
   box-shadow: 0px 10px 40px rgba(211, 211, 211, 0.808);
@@ -267,6 +270,7 @@
   /* 新增客製化RWD-左邊 */
   .pd-client-banner {
     margin-bottom: 0;
+    height: auto;
   }
   .pd-gain,
   .pd-slim,
@@ -278,6 +282,8 @@
   }
   .pd-target-wrap {
     background-color: transparent;
+    width: 100%;
+    margin-top: 20px;
   }
   .pd-target-wrap h1 {
     font-size: 28px;
@@ -315,8 +321,9 @@
     margin-bottom: 0px;
   }
   .pd-client-wrap {
-    margin-top: 50px;
+    margin-top: 20px;
     background-color: hsla(42, 100%, 51%, 0.18);
+    width: 100%;
   }
   .pd-suggest p {
     font-size: 20px;
