20211101_Cart_StoreDeliveryVersion1Complete

--- a/src/styles/Carts/CartManage.scss
+++ b/src/styles/Carts/CartManage.scss
@@ -262,6 +262,9 @@
         left: 92%;
       }
     }
+    .Map {
+      height: 400px;
+    }
     .storeinput {
       input {
         width: 100%;
