修改會員註冊

--- a/src/styles/Member/_MemberSignup.scss
+++ b/src/styles/Member/_MemberSignup.scss
@@ -22,7 +22,7 @@
           font-size: 24px;
           letter-spacing: 1px;
           text-indent: 1px;
-          margin:20px 0;
+          margin-bottom: 15px;
         }
         .karin-btn-signuppage-login {
           background-color: #f5f4f2;
@@ -34,7 +34,7 @@
           font-size: 24px;
           letter-spacing: 1px;
           text-indent: 1px;
-          margin: 0 0 20px 0;
+          margin-bottom: 15px;
         }
       } 
       @media (max-width: 575.99px) {
@@ -57,7 +57,7 @@
           font-size: 24px;
           letter-spacing: 1px;
           text-indent: 1px;
-          margin: 100px 0 20px 0;
+          margin: 0 0 20px 0;
         }
         .karin-btn-signuppage-login {
           background-color: #f5f4f2;
