--- a/src/styles/Product/_ProductDetail.scss
+++ b/src/styles/Product/_ProductDetail.scss
@@ -40,6 +40,7 @@
   background-color: rgba(143, 192, 101, 0.6);
   position: absolute;
   top: 58px;
+  z-index: -1;
 }
 .dt-product-imgwrap {
   width: 45%;
