--- a/src/styles/Restaurant/_reslist.scss
+++ b/src/styles/Restaurant/_reslist.scss
@@ -70,6 +70,7 @@
     background-color: rgba(255, 182, 6, 0.2);
     padding: 10px 20px 10px;
     border-radius: 0 0 15px 15px;
+    height: 170px;
   }
   @include mobile {
     margin: 10px 45px;
@@ -92,7 +93,8 @@
   &:hover {
     color: #729a51;
   }
-  &:active {
-    color: #729a51;
-  }
+}
+
+.res-pages-active {
+  color: $light-green;
 }
