--- a/src/styles/Product/_ProductDetail.scss
+++ b/src/styles/Product/_ProductDetail.scss
@@ -72,9 +72,10 @@
   color: #2a593e;
 }
 .dt-love-icon {
-  font-size: 32px;
+  font-size: 38px;
   color: #fb6107;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .dt-name {
