商品細節頁收藏功能ok

--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -263,6 +263,9 @@ input[name='pd-filter'] + label {
   color: #2a593e;
   margin-bottom: 20px;
 }
+.pd-pages-active{
+  color: #8fc065;
+}
 // .page-pre,
 // .page-next,
 .total-page {
