--- a/src/styles/Carts/CartManage.scss
+++ b/src/styles/Carts/CartManage.scss
@@ -113,6 +113,7 @@
       vertical-align: middle;
       img {
         width: 80px;
+        border-radius: 50%;
       }
     }
     @include mobile() {
@@ -265,6 +266,33 @@
     }
     .Map {
       height: 400px;
+      font-family: var(--Font-Family);
+      .PopCard {
+        h6 {
+          font-weight: var(--Second-Font-Weight);
+          color: var(--Third-color);
+          span {
+            font-size: var(--Font-7-11-font-size-mobile);
+            color: var(--Third-color);
+          }
+        }
+        button {
+          background-color: #ffffff;
+          border: 0.5px solid var(--Third-color);
+          border-radius: 50px;
+          font-size: 18px;
+          color: var(--Third-color);
+          font-weight: var(--Second-Font-Weight);
+        }
+        button:hover {
+          background-color: var(--Primary-color);
+          border: transparent;
+          border-radius: 50px;
+          font-size: 18px;
+          font-weight: var(--Second-Font-Weight);
+          color: #ffffff;
+        }
+      }
     }
     .storeinput {
       input {
