--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -245,6 +245,7 @@ input[name='pd-filter'] + label {
 .pd-love-icon {
   font-size: 30px;
   color: #fb6107;
+  z-index: 1;
 }
 .pdcard-icon{
   display: none;
@@ -371,6 +372,7 @@ input[name='pd-filter'] + label {
   .pd-card {
     width: 160px;
     height: 180px;
+    z-index: -1;
   }
   .pd-img {
     width: 100px;
