修改會員中心alert樣式

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,7 @@
 @import './styles/Member/MemberReview';
 //會員reviews
 @import './styles/Member/MemberPoint';
-//會員商品追蹤清單
+//會員商品收藏清單
 @import './styles/Member/MemberFavoriteProduct';
 //會員文章收藏清單
 @import './styles/Member/MemberFavoriteArticle';
