--- a/src/App.scss
+++ b/src/App.scss
@@ -177,28 +177,32 @@ footer {
 .hp_sBtn {
   border: 2px solid $light-green;
   box-sizing: border-box;
-  border-radius: 50px;
+  border-radius: 100px;
   display: inline-block;
   letter-spacing: 3px;
-  padding: 5px 30px;
+  padding: 15px 50px;
   font-size: 16px;
   color: $light-green;
   cursor: pointer;
   background-color: white;
   margin-top: 3px;
+  transition: .3s;
   &:hover {
-    filter: drop-shadow(
-      15px 15px 0px rgba(143, 192, 101, 0.5)
-    );
+    // filter: drop-shadow(
+    //   15px 15px 0px rgba(143, 192, 101, 0.5)
+    // );
+    box-shadow: 10px 10px 0 0 #8fc06574;
   }
 }
 //文章區橫幅banner，more按鈕
 .moreBtn {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 24px;
+  color: hsla(0, 0%, 0%, 0.6);
+  max-width: 200px;
 
   div {
     p {
